Edditing the index file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Edited file
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Student Bio</h1>
+    <h2>Wesley Fonseca</h2>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ2T1pZZaS9xTWhv-HFIiCF0AROgtSMDH2kxqf1wvoaNskDOEjXBA" alt="Image goes here."/>
+    <p>Here's my paragraph. I'm placing a link <a href="https://www.google.com/">here.</a></p>
+    <h2>Contact Info</h2>
+    <ul>
+        <li><b>GitHub</b>: <a href="https://github.com/wfonseca18">Wesley Fonseca</a></li>
+        <li><b>Email</b>: <a href="mailto:wfonseca18@gmail.com">wfonseca18@gmail.com</a></li>
+        <li><b>Profile</b>: <a href="https://github.com/wfonseca18">Profile</a></li>
+    </ul>
+    
+</body>
+</html>
